# lum

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
docs/adr/: 0001-dependency-selection-philosophy.md  0002-pure-rust-radio-playback-stack.md  0002-radio-playback-uses-ffplay.md  0003-application-wide-rotating-tracing-logs.md  0004-repository-local-install-via-xtask.md  0005-yt-dlp-thin-wrapper-with-auto-provisioning.md  0006-git-id-marker-only-ownership.md  0007-git-id-uses-git-scoped-ssh-routing.md  0008-youtube-radio-uses-yt-dlp-and-ffmpeg.md  0009-ffmpeg-auto-provisioning-for-linux-and-windows.md  0010-radio-playback-drops-pause-resume.md
src/: artifact.rs  cli.rs  env.rs  ffmpeg.rs  git_id.rs  logging.rs  main.rs  paths.rs  shell.rs  tools.rs
src/backup/: README.md  archive.rs  mod.rs  restore.rs  target.rs  upload.rs
src/env/: README.md  catalog.rs  mod.rs  shell.rs  state.rs
src/font/: catalog.rs  install.rs  mod.rs  paths.rs  uninstall.rs
src/git_id/: README.md  artifacts.rs  config.rs
src/radio/: README.md  audio.rs  controls.rs  decode.rs  mod.rs  player.rs  stations.rs
src/repos/: README.md  mod.rs  scanner.rs
src/repos/mirror/: config.rs  git.rs  mod.rs  watch.rs
src/tools/: README.md  catalog.rs  github.rs  install.rs  mod.rs  platform.rs  state.rs  version.rs
src/vol/: mod.rs
src/yt/: README.md  args.rs  deps.rs  mod.rs
tests/: backup_cli.rs  env_cli.rs  font_cli.rs  git_id_cli.rs  repos_cli.rs  tools_cli.rs  version_cli.rs  vol_cli.rs  yt_cli.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
