[package]
name = "lum"
version = "0.1.3"
edition = "2024"

[workspace]
members = [".", "xtask"]
resolver = "3"

[dependencies]
anyhow = "1.0.102"
audioadapter-buffers = "3.0.0"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
cpal = "0.17.3"
crossterm = "0.29.0"
directories = "6.0.0"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ringbuf = "0.5.0"
rubato = "3.0.0"
symphonia = { version = "0.6.0", features = ["all"] }
tokio = { version = "1.52.3", features = ["full"] }
flate2 = "1.1.5"
tar = "0.4.44"
xz2 = "0.1.7"
zip = "6.0.0"
tempfile = "3.23.0"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
volumecontrol = "0.1"
which = "8.0.2"
dirs = "6.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
