[package]
name = "lum"
version = "0.2.2"
edition = "2024"

[build-dependencies]
chrono = { version = "0.4.44", features = ["clock", "std"] }


[workspace]
members = [".", "xtask"]
resolver = "3"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
directories = "6.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "sync"] }
flate2 = "1.1.5"
tar = "0.4.44"
xz2 = "0.1.7"
zip = "8.6.0"
tempfile = "3.23.0"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
volumecontrol = "0.1"
which = "8.0.2"
ignore = "0.4.25"
chrono = { version = "0.4.44", features = ["clock", "std"] }
globset = "0.4.18"
notify-rust = "4"
sysinfo = "0.39.3"
rand = "0.9.2"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
